# bunenv

./: .gitignore  .pre-commit-config.yaml  ACTION.md  CHANGELOG.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile  README.md  conf.py  index.rst  make.bat
docs/api/: index.rst
docs/guides/: configuration.rst  index.rst  migrating.rst  quickstart.rst
docs/source/: conf.py  index.rst
docs/source/api/: cli.rst
docs/source/guides/: advanced.rst  comparison.rst  contributing.rst  quickstart.rst  troubleshooting.rst  workflows.rst
src/bunenv/: __init__.py
tests/: conftest.py  test_activation.py  test_config.py  test_edge_cases.py  test_install.py  test_parsers.py  test_utils.py  test_version.py
tests/integration/: test_end_to_end.py
