[project]
name = "bunenv"
version = "0.1.0"
description = "Bun virtual environment builder"
readme = "README.md"
authors = [
    { name = "Jacob Coffee", email = "jacob@z7x.org" }
]
requires-python = ">=3.10"
dependencies = []
license = { text = "BSD-3-Clause" }
keywords = ["bun", "environment", "virtual", "isolated"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
]

[project.urls]
Homepage = "https://github.com/JacobCoffee/bunenv"
Repository = "https://github.com/JacobCoffee/bunenv"
Issues = "https://github.com/JacobCoffee/bunenv/issues"
Changelog = "https://github.com/JacobCoffee/bunenv/releases"

[project.scripts]
bunenv = "bunenv:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a26",
    "prek>=0.2.18",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "codespell>=2.2.6",
    "pytest-sugar>=1.1.1",
]
docs = [
    "sphinx>=7.0.0",
    "shibuya>=2024.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-tabs>=3.4.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2024.0.0",
]

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Errors, pyflakes, warnings, isort
ignore = [
    "E501",     # Line too long (handled by formatter)
    "COM812",   # Missing trailing comma (conflicts with formatter)
    "ISC001",   # Implicit string concatenation (conflicts with formatter)
]
# Note: Code adapted from nodeenv - keeping original style mostly intact

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ty]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
exclude = []

[tool.codespell]
quiet-level = 3
ignore-words-list = "selectin, alog"
skip = "uv.lock, dist, build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                          # Show all test summary info
    "--strict-markers",             # Strict marker validation
    "--strict-config",              # Strict config validation
    "--cov=src/bunenv",            # Coverage for source
    "--cov-report=term-missing",   # Terminal report with missing lines
    "--cov-report=html",           # HTML report in htmlcov/
    "--cov-report=xml",            # XML for CI (codecov)
    "--cov-fail-under=98",         # Require 98% coverage (5 lines are platform-specific/unreachable on Windows)
    "-vv",                         # Verbose output
    "--tb=short",                  # Short traceback format
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "no_mock_urlopen: disable automatic urlopen mocking for tests that explicitly test urlopen behavior",
]
# Performance optimization
cache_dir = ".pytest_cache"
console_output_style = "progress"
